--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Danny Chen
 description: Blog for CS373
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/head.png
+avatar: http://raw.githubusercontent.com/SrsBusiness/SrsBusiness.github.io/master/images/head.png
 
 #
 # Flags below are optional
